--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -6,10 +6,23 @@
 	<canvas id="AmazingCanvas" style="border:3px solid #000000;">Your browser is bad and you should feel bad</canvas>
 	<script type="text/javascript" src="index.js"></script>
 	<script type="text/javascript" src="aimfire.js"></script>
-	<form>
-		Circle radius: <input id="circleradius" type="number">
-		<button onclick="changeCircleSize(parseInt(document.getElementById('circleradius').value))">change value</button>
-	</form>
+	<div class="toolbar" id="toolbar">
+		<form onsubmit="return false">
+			Pen Size: <input id="pensize" value="5" type="number">
+			<button onclick="setPenSize()">Apply</button>
+		</form>
+		<form onsubmit="return false">
+			Circle Radius: <input id="circleradius" value="40" type="number">
+			<button onclick="setCircleRadius()">Apply</button>
+		</form>
+		<form onsubmit="return false">
+			<button onclick="setFuncDrawing()">Free-hand drawing</button>
+		</form>
+		<form onsubmit="return false">
+			<button onclick="setFuncCircle()">Circles</button>
+		</form>
+	</div>
+
 </body>
 </html>
 
