--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -25,15 +25,14 @@
 		<form class="tool" onsubmit="return false">
 			<button onclick="currentFunc = drawCircle;">Circles</button>
 		</form>
+		<div id="colours">
+			<div class="switch activ" style="background-color: red"></div>
+			<div class="switch" style="background-color: green"></div>
+			<div class="switch" style="background-color: yellow"></div>
+			<div class="switch" style="background-color: blue"></div>
+			<div class="switch" style="background-color: black"></div>
+		</div>
 	</div>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
