--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -25,7 +25,10 @@
 		<form class="tool" onsubmit="return false">
 			<button onclick="setFuncCircle()">Circles</button>
 		</form>
-		<div id="colours">
+		<form class="tool" onsubmit="return false">
+			<button onclick="redraw()">Redraw</button>
+		</form>
+		<div class="tool" id="colours">
 			<div class="switch activ" style="background-color: red"></div>
 			<div class="switch" style="background-color: green"></div>
 			<div class="switch" style="background-color: yellow"></div>
