--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -29,11 +29,11 @@
 			<button onclick="redraw()">Redraw</button>
 		</form>
 		<div class="tool" id="colours">
-			<div class="switch activ" style="background-color: red"></div>
-			<div class="switch" style="background-color: green"></div>
-			<div class="switch" style="background-color: yellow"></div>
-			<div class="switch" style="background-color: blue"></div>
-			<div class="switch" style="background-color: black"></div>
+			<div class="cSwitch activ" style="background-color: red"></div>
+			<div class="cSwitch" style="background-color: green"></div>
+			<div class="cSwitch" style="background-color: yellow"></div>
+			<div class="cSwitch" style="background-color: blue"></div>
+			<div class="cSwitch" style="background-color: black"></div>
 		</div>
 	</div>
 
