yet more baby steps. Undo pushing now works, must initialize array to be pushed with new Array()

--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -10,7 +10,7 @@
 	<div class="toolbar" id="toolbar">
 		<form class="tool" onsubmit="return false">
 			Pen Size: <input id="pensize" value="5" type="number">
-			<button onclick="setPenSize(parseInt(document.getElementById(pensize').value))">Apply</button>
+			<button onclick="setPenSize(parseInt(document.getElementById('pensize').value))">Apply</button>
 		</form>
 		<br>
 		<form class="tool" onsubmit="return false">
