--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -26,10 +26,13 @@
 			<button onclick="setFuncCircle()">Circles</button>
 		</form>
 		<form class="tool" onsubmit="return false">
-			<button onclick="undo()">Undo</button>
+			<button onclick="undo1()">Undo</button>
 		</form>
 		<form class="tool" onsubmit="return false">
-			<button onclick="redo()">Redo</button>
+			<button onclick="redo1()">Redo</button>
+		</form>
+		<form class="tool" onsubmit="return false">
+			<button onclick="redraw()">Redraw</button>
 		</form>
 		<div class="tool" id="colours">
 			<div class="switch activ" style="background-color: red"></div>
