--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 	<title>AIMFIRE (Amazing Image Manipulation For Interesting Realworld Expositions)</title>
@@ -20,11 +21,24 @@
 		</form>
 		<br>
 		<form class="tool" onsubmit="return false">
+			Rectangle Width: <input id="rectanglewidth" value="40" type="number">
+			<button onclick="setRectangleWidth(parseInt(document.getElementById('rectanglewidth').value), 0)">Apply</button>
+		</form>
+		<br>
+		<form class="tool" onsubmit="return false">
+			Rectangle Height: <input id="rectangleheight" value="40" type="number">
+			<button onclick="setRectangleWidth(parseInt(document.getElementById('rectangleheight').value), 0)">Apply</button>
+		</form>
+		<br>
+		<form class="tool" onsubmit="return false">
 			<button onclick="setFuncDrawing()">Free-hand drawing</button>
 		</form>
 
 		<form class="tool" onsubmit="return false">
 			<button onclick="setFuncCircle()">Circles</button>
+		</form>
+		<form class="tool" onsubmit="return false">
+			<button onclick="setFuncRectangle()">Rectangles</button>
 		</form>
 		<form class="tool" onsubmit="return false">
 			<button onclick="undo1()">Undo</button>
@@ -35,7 +49,13 @@
 		<form class="tool" onsubmit="return false">
 			<button onclick="redraw()">Redraw</button>
 		</form>
-		<div class="tool" id="colours"></div>
+		<div class="tool" id="colours">
+			<div class="cSwitch active" style="background-color: black"></div>
+			<div class="cSwitch" style="background-color: yellow"></div>
+			<div class="cSwitch" style="background-color: red"></div>
+			<div class="cSwitch" style="background-color: green"></div>
+			<div class="cSwitch" style="background-color: blue"></div>
+		</div>
 	</div>
 </body>
 </html>
