--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -12,10 +12,6 @@
 	<script type="text/javascript" src="save.js"></script>
 	<div class="toolbar" id="toolbar">
 		<form class="tool" onsubmit="return false">
-			<button onclick="saveImage()">Save</button>
-		</form>
-		<br>
-		<form class="tool" onsubmit="return false">
 			Pen Size: <input id="pensize" value="5" type="number">
 			<button onclick="setPenSize(parseInt(document.getElementById('pensize').value), 0)">Apply</button>
 		</form>
@@ -29,10 +25,15 @@
 			Rectangle Width: <input id="rectanglewidth" value="40" type="number">
 			<button onclick="setRectangleWidth(parseInt(document.getElementById('rectanglewidth').value), 0)">Apply</button>
 		</form>
-		<br>
+		<bl>
 		<form class="tool" onsubmit="return false">
 			Rectangle Height: <input id="rectangleheight" value="40" type="number">
 			<button onclick="setRectangleHeight(parseInt(document.getElementById('rectangleheight').value), 0)">Apply</button>
+		</form>
+		<br>
+		<form class="tool" onsubmit="return false">
+			Text Input: <input id="textinput" value="Hello, world!" type="text">
+			<button onclick="setText(document.getElementById('textinput').value)">Apply</button>
 		</form>
 		<br>
 		<form class="tool" onsubmit="return false">
@@ -46,13 +47,16 @@
 			<button onclick="setFuncRectangle()">Rectangles</button>
 		</form>
 		<form class="tool" onsubmit="return false">
+			<button onclick="setFuncText()">Text</button>
+		</form>
+		<form class="tool" onsubmit="return false">
 			<button onclick="undo1()">Undo</button>
 		</form>
 		<form class="tool" onsubmit="return false">
 			<button onclick="redo1()">Redo</button>
 		</form>
 		<form class="tool" onsubmit="return false">
-			<button onclick="redraw()">Redraw</button>
+			<button onclick="saveImage()">Save</button>
 		</form>
 		<div class="tool" id="colours">
 			<div class="cSwitch active" style="background-color: black"></div>
