out of time, hand this in

--- a/V1/server/src/index.html
+++ b/V1/server/src/index.html
@@ -39,7 +39,6 @@
 		<form class="tool" onsubmit="return false">
 			<button onclick="setFuncDrawing()">Free-hand drawing</button>
 		</form>
-
 		<form class="tool" onsubmit="return false">
 			<button onclick="setFuncCircle()">Circles</button>
 		</form>
@@ -58,6 +57,7 @@
 		<form class="tool" onsubmit="return false">
 			<button onclick="saveImage()">Save</button>
 		</form>
+		<p class="tool">Colors, unfortunately, do not work and nor does saving. Out of time. Start earlier next time! </p>
 		<div class="tool" id="colours">
 			<div class="cSwitch active" style="background-color: black"></div>
 			<div class="cSwitch" style="background-color: yellow"></div>
