--- a/V4/FlappyBird/index.html
+++ b/V4/FlappyBird/index.html
@@ -14,7 +14,8 @@
         <img src="images/frame-4.png" id="bird4" />
         <img src="images/bg.png" id="background" />
         <img src="images/ground.png" id="forground" />
-        <script src="script/Pipes.js"></script>
+        <img src="images/pipe.png" id="pipe" />
+        <script src="script/Pipe.js"></script>
         <script src="script/Enviroment.js"></script>
         <script src="script/Bird.js"></script>
         <script src="script/main.js"></script>
