--- a/V4/FlappyBird/index.html
+++ b/V4/FlappyBird/index.html
@@ -15,6 +15,7 @@
         <img src="images/bg.png" id="background" />
         <img src="images/ground.png" id="forground" />
         <img src="images/pipe.png" id="pipe" />
+        <img src="images/topPipe.png" id="topPipe" />
         <script src="script/Pipe.js"></script>
         <script src="script/Enviroment.js"></script>
         <script src="script/Bird.js"></script>
