UI will be added

--- a/V4/FlappyBird/index.html
+++ b/V4/FlappyBird/index.html
@@ -16,6 +16,11 @@
         <img src="images/ground.png" id="forground" />
         <img src="images/pipe.png" id="pipe" />
         <img src="images/topPipe.png" id="topPipe" />
+        <img src="images/muteMusic.png" id="muteMusic" />
+        <audio id="music">
+             <source src="audio/Ori_and_the_blind_forest-Lost_in_the_storm.mp3" type="audio/mpeg">
+             Your browser does not support the html audio tag
+        </audio>
         <script src="script/Pipe.js"></script>
         <script src="script/Enviroment.js"></script>
         <script src="script/Bird.js"></script>
