base game functional

--- a/V4/FlappyBird/index.html
+++ b/V4/FlappyBird/index.html
@@ -21,6 +21,7 @@
              <source src="audio/Ori_and_the_blind_forest-Lost_in_the_storm.mp3" type="audio/mpeg">
              Your browser does not support the html audio tag
         </audio>
+        <button id="restart">Restart</button>
         <script src="script/Pipe.js"></script>
         <script src="script/Enviroment.js"></script>
         <script src="script/Bird.js"></script>
