--- a/V4/FlappyBird/index.html
+++ b/V4/FlappyBird/index.html
@@ -19,6 +19,7 @@
         <img src="images/muteMusic.png" id="muteMusic" />
         <audio id="music">
              <source src="audio/Ori_and_the_blind_forest-Lost_in_the_storm.mp3" type="audio/mpeg">
+             <source src="audio/WilhelmScream.mp3" type="audio/mpeg">
              Your browser does not support the html audio tag
         </audio>
         <button id="restart">Restart</button>
