--- a/V4/FlappyBird/index.html
+++ b/V4/FlappyBird/index.html
@@ -24,8 +24,8 @@
              <source src="audio/WilhelmScream.mp3" type="audio/mpeg">
              Your browser does not support the html audio tag
         </audio>
-        <button id="mute">Mute</button>
-        <button id="unmute">Unmute</button>
+        <button id="mute">Mute music</button>
+        <button id="unmute">Unmute music</button>
         <button id="restart">Restart</button>
         <script src="script/Pipe.js"></script>
         <script src="script/Enviroment.js"></script>
