music made to loop

--- a/V4/FlappyBird/index.html
+++ b/V4/FlappyBird/index.html
@@ -16,7 +16,7 @@
         <img src="images/ground.png" id="forground" />
         <img src="images/pipe.png" id="pipe" />
         <img src="images/topPipe.png" id="topPipe" />
-        <audio id="music">
+        <audio loop id="music">
              <source src="audio/Ori_and_the_blind_forest-Lost_in_the_storm.mp3" type="audio/mpeg">
              Your browser does not support the html audio tag
         </audio>
